# chuchote

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
chuchote/: __init__.py  audio.py  banner.py  cli.py  config.py  doctor.py  llm.py  loop.py  memory.py  stt.py  text.py  tts.py  vad.py  wakeword.py
scripts/: install.ps1  install.sh
tests/: test_banner.py  test_config.py  test_doctor.py  test_memory.py  test_stt.py  test_text.py
voices/: .gitkeep
