[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chuchote"
version = "0.1.0"
description = "Local-first, hands-free voice assistant for Ollama."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Chuchote contributors" }]
keywords = ["voice", "assistant", "ollama", "local", "whisper", "piper", "tts", "stt"]

dependencies = [
    "sounddevice>=0.4.6",  # mic capture + speaker playback
    "numpy>=1.24",         # audio buffers
    "faster-whisper>=1.0", # local STT
    "ollama>=0.3",         # local reasoning (talks to localhost:11434)
    "piper-tts>=1.2",      # local TTS
    "pynput>=1.7",         # push-to-talk key handling
    "openwakeword>=0.6",   # always-on wake word (onnxruntime, no API key)
    "pysilero-vad>=2.0",   # end-of-turn detection (Silero VAD, onnxruntime)
]

[project.scripts]
chuchote = "chuchote.cli:main"

[project.urls]
Homepage = "https://github.com/Cjayy77/chuchote"
Repository = "https://github.com/Cjayy77/chuchote"

[tool.setuptools.packages.find]
where = ["."]
include = ["chuchote*"]
