[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "chuchote"
version = "0.1.0"
description = "Local-first, hands-free voice assistant for Ollama."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Cedric (Cjayy77)" }]
keywords = ["voice", "assistant", "ollama", "local", "whisper", "piper", "tts", "stt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "sounddevice>=0.4.6",  # mic capture + speaker playback
    "numpy>=1.24",         # audio buffers
    "faster-whisper>=1.0", # local STT
    "ollama>=0.3",         # local reasoning (talks to localhost:11434)
    "piper-tts>=1.2",      # local TTS
    "pynput>=1.7",         # push-to-talk key handling
    "openwakeword>=0.6",   # always-on wake word (onnxruntime, no API key)
    "pysilero-vad>=2.0",   # end-of-turn detection (Silero VAD, onnxruntime)
    "tomli>=2; python_version < '3.11'",  # tomllib backport for config loading
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
chuchote = "chuchote.cli:main"

[project.urls]
Homepage = "https://github.com/Cjayy77/chuchote"
Repository = "https://github.com/Cjayy77/chuchote"
Issues = "https://github.com/Cjayy77/chuchote/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["chuchote*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
